refactor: enhance interpreter to support left-associative subtraction and improve error display